<resources>
    <string name="app_name">Android Samples</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="image_space">Image Space</string>
    <string name="facebook">Facebook</string>
    <string name="call">Call</string>
    <string name="geo_localization">GeoLocalization</string>
    <string name="geo_destination">GeoDestination</string>
    <string name="contacts">Contacts</string>
    <string name="web_audio">Web Audio</string>
    <string name="hello_world">Hello World!!</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="send_notification">Send Notification</string>
    <string name="elapsed_realtime_repeat">Elapsed RealTime Repeat</string>
    <string name="elapsed_realtime">Elapsed RealTime</string>
    <string name="rtc_inexact">RTC Inexact</string>
    <string name="rtc_exact">RTC Exact</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="start_bind_service">Start Bind Service</string>
    <string name="stop_bind_service">Stop Bind Service</string>
    <string name="get_counter">Get Counter</string>
    <string name="sum">Sum</string>
    <string name="send_sms">Send SMS</string>
    <string name="play_from_raw_folder">Play from RAW folder</string>
    <string name="stop_from_raw_folder">Stop from RAW folder</string>
    <string name="play_from_sdcard">Play from SD Card</string>
    <string name="stop_from_sdcard">Stop from SD Card</string>
    <string name="take_picture">Take Picture</string>
    <string name="capture_video">Capture Video</string>
</resources>
