<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".intent.IntentActivity">

    <Button android:id="@+id/intentButtonFacebook" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/facebook" android:layout_marginTop="10dp"/>

    <Button android:id="@+id/intentButtonCall" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/call" android:layout_marginTop="10dp"/>

    <Button android:id="@+id/intentButtonGeoLocalization" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/geo_localization" android:layout_marginTop="10dp"/>

    <Button android:id="@+id/intentButtonGeoDestination" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/geo_destination" android:layout_marginTop="10dp"/>

    <Button android:id="@+id/intentButtonContacts" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/contacts" android:layout_marginTop="10dp"/>

    <Button android:id="@+id/intentButtonWebAudio" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/web_audio" android:layout_marginTop="10dp"/>

    <Button android:id="@+id/intentButtonHelloWorld" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/hello_world" android:layout_marginTop="10dp"/>

</LinearLayout>