<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".alarm.AlarmActivity">

    <Button
        android:id="@+id/alarmButtonElapsedRTRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elapsed_realtime_repeat"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/alarmButtonElapsedRT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elapsed_realtime"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/alarmButtonRTCExact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rtc_exact"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/alarmButtonRTCInexact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rtc_inexact"
        android:layout_marginTop="10dp"/>

</LinearLayout>