<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".audio.AudioActivity">

    <Button
        android:id="@+id/audioButtonPlayRawFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_from_raw_folder"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/audioButtonStopRawFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_from_raw_folder"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/audioButtonPlaySDCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_from_sdcard"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/audioButtonStopSDCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_from_sdcard"
        android:layout_marginTop="10dp"/>

</LinearLayout>
