<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".service.BindServiceActivity">

    <Button
        android:id="@+id/serviceButtonStartBind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_bind_service"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/serviceButtonStopBind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_bind_service"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/serviceButtonGetCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_counter"
        android:layout_marginTop="10dp"/>

</LinearLayout>